src/objects/Notification_settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting is used to store the number of days when a rep receives notification of an expiring agreement/price header/connection.</description>
    <fields>
        <fullName>Batch_Status_Address__c</fullName>
        <description>Email address to which ExpiryNotificationBatch status is sent</description>
        <label>Batch Status Address</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Business Unit for which expiry notification needs to be sent.</description>
        <label>Business Unit</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_180_Offset__c</fullName>
        <label>Day 180 Offset</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_30_Offset__c</fullName>
        <label>Day 30 Offset</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_60_Offset__c</fullName>
        <label>Day 60 Offset</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FromAddressLable__c</fullName>
        <description>Organization wide Address Display name.</description>
        <label>EmailAddressLabel</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory1__c</fullName>
        <description>Territory for which we need to send expiry notification.</description>
        <label>Territory1</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory2__c</fullName>
        <description>Territory for which we need to send expiry notification.</description>
        <label>Territory2</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory3__c</fullName>
        <description>Territory for which we need to send expiry notification.</description>
        <label>Territory3</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Notification_settings</label>
</CustomObject>